# Cipher

./: .gitignore  README.md  main.py  pyproject.toml  settings.json  setup.py
LocalAppData/Cipher/: settings.json  shortcuts.json  terminal.json
LocalAppData/Cipher/styles/: lexer.json  styles.qss  syntax.json
cipher/: __init__.py  __main__.py
cipher/core/: application.py  client.py  server.py  stdout.py
cipher/core/application/: __init__.py  base.py  client.py  server.py
cipher/ext/: __init__.py  core.py  event.py  exceptions.py  extension.py
cipher/src/: __init__.py  body.py  editor.py  extensionlist.py  filemanager.py  git.py  image.py  logs.py  menubar.py  outputview.py  search.py  sidebar.py  splitter.py  tab.py  tabview.py  terminal.py  thread.py  window.py
cipher/src/extensionlist/: __init__.py  item.py
cipher/src/filemanager/: __init__.py  model.py  splitter.py  treeview.py
cipher/src/logs/: __init__.py
cipher/src/menubar/: __init__.py
cipher/src/outputview/: __init__.py
cipher/src/search/: __init__.py  item.py  model.py  view.py
cipher/src/sidebar/: __init__.py  icon.py
cipher/src/splitter/: __init__.py  base.py  hsplitter.py  vsplitter.py
cipher/src/tab/: __init__.py  editor.py  image.py  tab.py
cipher/src/tabview/: __init__.py  image.py  tab.py
cipher/src/terminal/: process.py  (+3 more)
ext/: __init__.py  event.py  exceptions.py  extension.py
src/: body.py  editor.py  explorer.py  extensionlist.py  extensions.py  filemanager.py  folder.py  lexer.py  menubar.py  sidebar.py  tab.py  thread.py  window.py
styles/: styles.qss  syntax.json
(+45 files in other folders)
