[tool.poetry]
name = "cipher"
version = "1.1.0"
description = "A text editor made using PyQt6"
authors = ["Srpboyz <srpboyz69@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.2"
pyqt6 = "6.4.1"
pyqt6-qscintilla = "^2.14.1"
winotify = "1.1.0"
psutil = "5.9.4"
pywin32 = "305"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
