[tool.poetry]
name = "cipher"
version = "1.1.1"
description = "A text editor made using PyQt6"
authors = ["Srpboyz <srpboyz69@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyqt6 = "6.4.1"
pyqt6-qscintilla = "^2.14.1"
psutil = "5.9.4"
pywin32 = { version = "305", platform = "windows" }
filetype = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
